# rust-fhir

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_script.rs
.circleci/: config.yml
.github/workflows/: generate.yml
schema/: stu3.json
src/: build.rs  client.rs  lib.rs  mod.rs  pbany.rs  pbstruct.rs  pbtime.rs
src/models/: mod.rs
src/models/r4/: Account.rs  Account_Coverage.rs  Account_Guarantor.rs  ActivityDefinition.rs  ActivityDefinition_DynamicValue.rs  ActivityDefinition_Participant.rs  Address.rs  AdverseEvent.rs  AdverseEvent_Causality.rs  AdverseEvent_SuspectEntity.rs  Age.rs  AllergyIntolerance.rs  AllergyIntolerance_Reaction.rs  Annotation.rs  Appointment.rs  AppointmentResponse.rs  Appointment_Participant.rs  Attachment.rs  AuditEvent.rs  AuditEvent_Agent.rs  AuditEvent_Detail.rs  AuditEvent_Entity.rs  AuditEvent_Network.rs  AuditEvent_Source.rs  Basic.rs  Binary.rs  BiologicallyDerivedProduct.rs  BiologicallyDerivedProduct_Collection.rs  BiologicallyDerivedProduct_Manipulation.rs  BiologicallyDerivedProduct_Processing.rs  BiologicallyDerivedProduct_Storage.rs  BodyStructure.rs  Bundle.rs  Bundle_Entry.rs  Bundle_Link.rs  Bundle_Request.rs  Bundle_Response.rs  Bundle_Search.rs  CapabilityStatement.rs  CapabilityStatement_Document.rs  (+620 more)
src/models/r4b/: Account.rs  Account_Coverage.rs  Account_Guarantor.rs  ActivityDefinition.rs  ActivityDefinition_DynamicValue.rs  ActivityDefinition_Participant.rs  Address.rs  AdministrableProductDefinition.rs  AdministrableProductDefinition_Property.rs  AdministrableProductDefinition_RouteOfAdministration.rs  AdministrableProductDefinition_TargetSpecies.rs  AdministrableProductDefinition_WithdrawalPeriod.rs  AdverseEvent.rs  AdverseEvent_Causality.rs  AdverseEvent_SuspectEntity.rs  Age.rs  (+664 more)
src/r4/: core.rs  fhirproto.rs  ml.rs  mod.rs  qicore.rs  uscore.rs
src/stu3/: core.rs  fhirproto.rs  mod.rs  uscore.rs
(+785 files in other folders)
