[package]
name = "fhir"
description = "HL7 FHIR data models"
version = "0.0.4"
edition = "2021"
authors = ["Balamurali Pandranki <balamurali@live.com>"]
documentation = "https://docs.rs/fhir"
readme = "README.md"
repository = "https://github.com/itsbalamurali/rust-fhir"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }



[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.11"
maplit = "1.0"
Inflector = "0.1.6"
