[package]
name = "fhir"
description = "HL7 FHIR data models"
version = "0.0.4"
edition = "2021"
authors = ["Balamurali Pandranki <balamurali@live.com>"]
documentation = "https://docs.rs/fhir"
readme = "README.md"
repository = "https://github.com/itsbalamurali/rust-fhir"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.15.0"
maplit = "1.0.2"
convert_case = "0.5"
