[package]
name = "fhir"
description = "HL7 FHIR data models"
version = "0.0.6"
edition = "2021"
authors = ["Balamurali Pandranki <balamurali@live.com>"]
documentation = "https://docs.rs/fhir"
readme = "README.md"
repository = "https://github.com/itsbalamurali/rust-fhir"
license-file = "LICENSE"

[dependencies]
prost = { version = "0.11", features = ["prost-derive"] }
prost-types = "0.11"
prost-wkt = "0.3.4"
prost-wkt-types = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }

[build-dependencies]
prost-build = { version = "0.11" }
prost-wkt-build = "0.3.4"
